--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="en-US">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My GitHub Pages Site</title>
+    <title>Browsersync, Webpack, TypeScript + React</title>
 </head>
+
 <body>
-    <h1>Welcome to My GitHub Pages Site</h1>
-    <p>This is my first GitHub Pages deployment!</p>
+    <h1>Browsersync, Webpack, TypeScript + React example</h1>
+    <div id="app"></div>
+    <script src="dist/bundle.js"></script>
 </body>
 </html>
